test/tests/stages/14_pointers/invalid_types/extra_credit/compound_divide_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  int
  *
  identifier(y)
  =
  const int(0)
  ;
  identifier(x)
  /=
  identifier(y)
  ;
  return
  const int(0)
  ;
  }
